src/App.css
.Container {
  min-height: 100vh;
  width: 100vw;
  background-color: #212121;
  color: whitesmoke;
  padding-inline: 10px;
  position: fixed;
}

.Panel {
  position: relative;
  padding: 20px;
  display: flex;
  flex-direction: row;
  gap: 1170px;
}

.position-relative {
  position: relative;
  z-index: 9999;
}

.Upgrade_Info,
.Upgrade_Info_modal,
.modal {
  display: flex;
  flex-direction: row;
  
}

.Upgrade_Info_modal {
  margin-left: 20px;
}

.dropdownImg{
  height: 25px;
  width: 25px;
  filter: invert(1) brightness(2) contrast(90%);
}

img {
  height: 20px;
  width: 20px;
  filter: invert(1) brightness(2) contrast(500%);
}

.account,
.log-in,
.sign-up {
  border: none;
  border-radius: 45px;
  font-weight: 500;
}

.log-in {
  background-color: white;
  padding: 5px;
  padding-left: 15px;
  padding-right: 15px;
  color: black;
  margin-right: 10px;
}

.sign-up {
  padding: 5px;
  padding-left: 15px;
  padding-right: 15px;
  border: 1px solid #2f2e2e;
  background-color: #1c1c1c;
}

.prompt_panel.no-chat {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.prompt_panel.chat {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.title_content {
  font-weight: 500;
  font-size: 30px;
  margin-bottom: 20px;
}

.chat-box {
  position: relative;
  top: 0;
  margin-top: -80px;
  height: 660px;
  width: 100vw;
  display: flex;
  justify-content: center;
  overflow-y: scroll;
}

.chat-history {
  width: 100%;
  max-width: 820px;
  padding: 0 20px;
  margin-bottom: 30px;
  margin-left: 33px;
}

.user_chat,
.assistant {
  position: relative;
  display: flex;
  flex-direction: column;
  width: fit-content;
  max-width: 600px;
  margin-bottom: 20px;
}

.user_chat {
  justify-self: flex-end;
  margin-right: 20px;
  padding-right: 40px !important;
  padding: 20px;
  background-color: #313131;
  border-radius: 25px;
}

.chat-message.error {
  background-color: #ffebeb;
  border: 1px solid #ff5c5c;
  border-radius: 25px;
  color: #a10000;
  font-style: italic;
  width: fit-content;
  padding: 20px;
}

.assistant {
  padding: 20px;
  height: auto;
  overflow-wrap: break-word;
  white-space: normal;
}

.gap{
  width: 100%;
  height: 100px;
}

.input_panel {
  position: relative;
  margin-top: -30px;
  border: 1px solid #474747;
  border-radius: 30px;
  background-color: #2f2e2e;
  min-height: 110px;
  width: 750px;
  margin-bottom: 5px;
}

.prompt {
  margin: 10px;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  border: 1px solid #2f2e2e;
  border-radius: 30px;
  background-color: #2f2e2e;
  display: flex;
  flex-direction: column-reverse;
  resize: none;
  overflow-y: hidden;
  max-height: calc(1.5em * 8);
  min-height: 50px;
  width: 730px;
  outline: none;
  padding: 10px;
  font-size: 15px;
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
  line-height: 1.5;
}

.links {
  display: flex;
  flex-direction: row;
  margin-left: 20px;
  margin-bottom: 10px;
}

.attach,
.search,
.reason,
.voice {
  border: 1px solid #474747;
  padding: 10px;
  margin-right: 10px;
  border-radius: 30px;
  display: flex;
  flex-direction: row;
  gap: 5px;
}

.voiceImg {
  filter: brightness(0) saturate(100%);
}

.voice {
  margin-left: 340px;
  margin-right: 20px;
  background-color: white;
  color: black;
}

p {
  font-weight: 600;
  font-size: small;
}

.policy_notice{
  position: fixed;
  z-index: 9999;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
}

